# chatty

./: .cursor_rules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Justfile  RATIONALE.md  README.md  TASKS.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ai_prompts/: README.md  data_model.txt  socket_io.txt
app/: __init__.py  alembic.ini  pyproject.toml  run.py
app/alembic/: env.py
app/alembic/versions/: 0001_baseline.py
app/src/chatty/: __init__.py  config.py  main.py
app/src/chatty/core/: database.py  logging.py  middleware.py
app/src/chatty/models/: __init__.py  chatroom.py  chatroom_participant.py  message.py  user.py
app/src/chatty/routers/: chatroom_participants.py  chatrooms.py  health.py  hello.py  messages.py  users.py
app/src/chatty/schemas/: chatroom.py  chatroom_participant.py  message.py  user.py
app/tests/: conftest.py  test_chatrooms.py  test_main.py  test_users.py
app/tests_smoke/: smoke_socketio.py  smoke_test.py
terraform/: .tflint.hcl  README.md
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/environments/dev/: backend.hcl  terraform.tfvars  variables.tf
terraform/environments/prod/: backend.hcl  terraform.tfvars
terraform/environments/staging/: backend.hcl  main.tf  outputs.tf  terraform.tfvars
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
