[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatty"]

[project]
name = "chatty"
version = "0.1.0"
description = "Chatty Backend experimentation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.29.0,<1",
    "pydantic>=2.10.0,<3",
    "sqlalchemy>=2.0.0,<3",
    "structlog>=24.0.0,<26",
    "python-socketio>=5.10.0,<6",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "python-socketio[client]>=5.10.0",
    "aiohttp>=3.9.0",
    "requests>=2.32.5",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["chatty"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
