[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "chatty"
version = "0.1.0"
description = "Chatty Backend experimentation"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi>=0.115,<1",
  "psycopg2-binary>=2.9,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.3,<3",
  "python-socketio>=5.10,<6",
  "sqlalchemy>=2,<3",
  "structlog>=24,<26",
  "uvicorn[standard]>=0.29,<1",
]

[dependency-groups]
dev = [
  "aiohttp>=3.9",
  "alembic>=1.13,<2",
  "deptry>=0.23",
  "httpx>=0.25.2",
  "pip-audit>=2.7",
  "pre-commit>=4",
  "pyright>=1.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=0.21.1",
  "python-socketio[client]>=5.10",
  "requests>=2.32.5",
  "ruff>=0.4",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/chatty" ]

[tool.ruff]
line-length = 100
indent-width = 4
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "T20", # flake8-print (no print statements)
]
lint.ignore = [
  "F841", # unused variables — permitted per project convention
]
lint.per-file-ignores."tests_smoke/*" = [
  "T20", # smoke tests use print for debug output intentionally
]
lint.isort.known-first-party = [ "chatty" ]

[tool.deptry]
per_rule_ignores.DEP002 = [
  "uvicorn",         # declared as production dep but invoked via CLI, not imported. Legitimate runtime dependency.
  "psycopg2-binary", # loaded by SQLAlchemy via DATABASE_URL scheme, not imported directly.
]
per_rule_ignores.DEP003 = [
  "starlette", # imported directly in middleware but is a transitive dep of FastAPI
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = "-v --tb=short"
ini_options.asyncio_mode = "auto"
